<resources>
    <string name="app_name">FinderJob</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workfly">Workfly</string>
    <string name="title"><![CDATA[The Intelligent Job Search & Posting App]]></string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="not_a_member_register_now">Not a member? Register now</string>
    <string name="back">back</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="find_job_title">Find Your Ideal Job Right Here! Right Here!</string>
    <string name="search_job_subtitle">There are many ways to promote an open job position on social media. But let’s first go over the basic content elements to include.</string>
    <string name="dream_job_subtitle">How can social media job post help your recruitment process? We can name several ways, including reaching a broader spectrum.</string>
    <string name="dream_job_title">The Faster Way to Find Your Dream Job</string>
    <string name="take_look_job">Take a look below for ideas of what to include in your social media job post, and tips to make your vacancy content authentic.</string>
    <string name="next">next</string>
    <string name="have_account">Already have an account?</string>
    <string name="accept">Continue and accept Our</string>
    <string name="signup_title">Create Your Personal Account</string>
    <string name="sign_welcome">Enter your phone number to sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp">Enter OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="profile">profile</string>
    <string name="setting_icon">setting icon</string>
    <string name="logo">Logo</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_subtitle">A password reset link will be sent to the email entered below</string>
    <string name="resend"><![CDATA[ Resend]]></string>
    <string name="don_t_receive_email">Don’t receive email?</string>
    <string name="continue_with_phone">Continue with phone</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="contact_our_support_team">Contact our support team</string>
    <string name="need_help"><![CDATA[Need help? ]]></string>

</resources>