<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Feature1Fragment"
    android:orientation="vertical">


    <ImageView
        android:layout_marginTop="64dp"
        android:layout_width="411dp"
        android:layout_height="294dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_hello"
        android:padding="32dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dream_job_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dream_job_subtitle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:lineHeight="22dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/dark_blue"
        android:gravity="center_horizontal"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />  <!-- Empty space filler -->

    <!-- Next Button -->
    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/next"
        android:gravity="center"
        android:src="@drawable/btn_next" />
</LinearLayout>